tests/machine/x/fs/fun_expr_in_let.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/fun_expr_in_let.fs(4,19): error FS0002: This function takes too many arguments, or is used in a context where a function is not expected

/workspace/mochi/tests/machine/x/fs/fun_expr_in_let.fs(5,15): error FS0003: This value is not a function and cannot be applied
