tests/machine/x/fs/fun_expr_in_let.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:26:51Z
open System

let square: obj = fun x -> x * x
printfn "%A" (square 6)
